examples/bad/deprecated_call.mko
// EXPECT: deprecated
#[deprecated("use new_api")]
fn old_api() -> int {
    1
}

fn main() {
    let _ = old_api()
}
